<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp"
    tools:context=".view.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/preencha_com_suas_informacoes"
        android:textSize="20sp"/>

    <TextView
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_marginTop="25dp"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/informe_seu_nome"/>

    <EditText
        android:id="@+id/edit_name"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:textAlignment="center" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="16sp"
        android:layout_marginTop="25dp"
        android:text="@string/informe_seu_telefone"/>

    <EditText
        android:id="@+id/edit_phone"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:inputType="phone"
        android:textAlignment="center" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="16sp"
        android:layout_marginTop="25dp"
        android:text="@string/informe_seu_e_mail"/>

    <EditText
        android:id="@+id/edit_email"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:textAlignment="center" />

    <Button
        android:id="@+id/button_send"
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:textColor="#fff"
        android:textSize="15sp"
        android:text="@string/enviar"/>

</LinearLayout>