<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="8dp"
    tools:context=".view.NotifyActivity">

    <TextView
        android:id="@+id/text_welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/notificacoes"
        android:textSize="20sp"
        android:gravity="center"
        android:textColor="#fff"
        android:background="@color/colorPrimary"/>

    <CheckBox
        android:layout_marginTop="10dp"
        android:id="@+id/checkbox_notification_via_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/receber_notifica_es_sobre_nosso_aplicativo_via_telefone"/>

    <CheckBox
        android:layout_marginTop="10dp"
        android:id="@+id/checkbox_notification_via_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/receber_notifica_es_sobre_nosso_aplicativo_via_email"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_weight="1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_your_infos"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/seus_dados"
            android:textColor="#fff"
            android:background="@color/colorPrimary"/>

        <Button
            android:id="@+id/button_list"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_weight="1"
            android:textColor="#fff"
            android:text="@string/notificacoes"
            android:background="@color/colorPrimary"/>
    </LinearLayout>
</LinearLayout>